force-app/main/default/objects/Goal__c/Goal__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Goal</label>
    <nameField>
        <displayFormat>Goal-{0000}</displayFormat>
        <label>Goal #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>