force-app/main/default/objects/Goal__c/fields/Achieved_Date__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Date__c</fullName>
    <label>Achieved/Close Date</label>
    <type>Date</type>
</CustomField>