force-app/main/default/objects/Goal__c/fields/Client_Session__c.field-meta.xml
<CustomField>
    <fullName>Client_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Entry</label>
    <referenceTo>Client_Session__c</referenceTo>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>