force-app/main/default/objects/Goal__c/fields/ExpTabLabel__c.field-meta.xml
<CustomField>
    <fullName>ExpTabLabel__c</fullName>
    <label>ExpTabLabel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>