force-app/main/default/objects/Goal__c/fields/Goal_Status__c.field-meta.xml
<CustomField>
    <fullName>Goal_Status__c</fullName>
    <label>Goal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Goal Set</fullName>
            </value>
            <value>
                <fullName>Outcome Obtained</fullName>
            </value>
            <value>
                <fullName>Outcome Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>