force-app/main/default/objects/Goal__c/fields/Participant_s_Role_in_Achieving_Goal__c.field-meta.xml
<CustomField>
    <fullName>Participant_s_Role_in_Achieving_Goal__c</fullName>
    <label>Participant’s Role in Achieving Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>