force-app/main/default/objects/Goal__c/fields/Resources_Needed__c.field-meta.xml
<CustomField>
    <fullName>Resources_Needed__c</fullName>
    <inlineHelpText>What other culturally appropriate services or resources are needed or available to meet the goal.</inlineHelpText>
    <label>Resources Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>