force-app/main/default/objects/Goal__c/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Plan</label>
    <referenceTo>Treatment_Plan__c</referenceTo>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>