force-app/main/default/objects/Goal__c/validationRules/Close_Goal.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Goal</fullName>
    <active>true</active>
    <errorConditionFormula>not(isblank(Achieved_Date__c))

&amp;&amp;

ispickval(Goal_Status__c, &quot;Goal Set&quot;)</errorConditionFormula>
    <errorMessage>Please update Goal Status field if outcome was obtained or not met.</errorMessage>
</ValidationRule>