force-app/main/default/objects/Goal__c/validationRules/Missing_Goal_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Goal_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>not(isblank(text(Category__c)))

&amp;&amp;

(isblank(Start_Date__c) || isblank( text(Goal_Status__c)))</errorConditionFormula>
    <errorMessage>Please input a Goal Status and/or Start Date.</errorMessage>
</ValidationRule>