force-app/main/default/objects/Goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Goal__c</columns>
    <columns>Category__c</columns>
    <columns>Goal_Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Target_Date__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>Achieved_Date__c</columns>
    <columns>Case_Record__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>